tests/ui/resolve/modifiers/placeholder_unchecked.sol
contract A {
    modifier xrp() {
        unchecked {
            _; //~ERROR: placeholder statements cannot be used inside unchecked blocks
        }
    }

    constructor() {}
}
